--- a/views/system/new-talent.jade
+++ b/views/system/new-talent.jade
@@ -11,14 +11,7 @@ html
 	head
 		title Neues Talent
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
-		style.
-			body {
-				font-family: sans-serif;
-			}
-			label {
-				float: left;
-				width: 10em;
-			}
+		link(rel="stylesheet", type="text/css", href="/system-new.css")
 	body
 		h1 Neues Talent:
 		form(action="/talent/neu", method="post", accept-charset="utf-8")
