--- a/views/system/table-of-miracles.jade
+++ b/views/system/table-of-miracles.jade
@@ -2,33 +2,7 @@
 html
 	head
 		title Liturgie-Übersicht
-		style.
-			body {
-				font-family: Georgia, sans-serif;
-			}
-			h1 {
-				text-align: center;
-			}
-			section, header, main, footer {
-				padding: 0 5em;
-			}
-			table {
-				min-width: 75%;
-			}
-			caption {
-				font-size: 2em;
-				font-weight: bold;
-				font-family: serif;
-				font-style: italic;
-				padding: 0.5em;
-			}
-			td {
-				padding: 0.2em 1em;
-				border: 1px solid black;
-			}
-			.mitte {
-				text-align: center;
-			}
+		link(rel="stylesheet", type="text/css", href="/system-list.css")
 	body
 		header
 			a(href="/liturgie/neu") neue Liturgie
