--- a/views/system/table-of-rituals.jade
+++ b/views/system/table-of-rituals.jade
@@ -2,42 +2,10 @@
 html(lang="de")
 	head
 		title Ritual-Übersicht
+		link(rel="stylesheet", type="text/css", href="/system-list.css")
 		style.
-			*[title] {
-				cursor: help;
-			}
-			body {
-				font-family: Georgia, sans-serif;
-			}
-			h1 {
-				text-align: center;
-			}
-			section, header, main, footer {
-				padding: 0 5em;
-			}
-			table {
-				min-width: 75%;
-				margin-bottom: 3em;
-			}
-			caption {
-				font-size: 2em;
-				font-weight: bold;
-				font-family: serif;
-				font-style: italic;
-				padding: 0.5em;
-			}
-			td {
-				padding: 0.2em 1em;
-				border: 1px solid black;
-			}
 			th {
 				background-color: silver;
-			}
-			.mitte {
-				text-align: center;
-			}
-			.links {
-				text-align: left;
 			}
 			tbody:nth-child(odd) {
 				background-color: #ddd;
