--- a/views/system/table-of-talents.jade
+++ b/views/system/table-of-talents.jade
@@ -2,34 +2,9 @@ doctype 5
 html
 	head
 		title Talent-Übersicht
+		link(rel="stylesheet", type="text/css", href="/system-list.css")
 		style.
-			body {
-				font-family: sans-serif;
-			}
-			h1 {
-				text-align: center;
-			}
-			section {
-				padding: 0 5em;
-			}
-			table {
-				min-width: 75%;
-			}
-			caption {
-				font-size: 2em;
-				font-weight: bold;
-				font-family: serif;
-				font-style: italic;
-				padding: 0.5em;
-			}
-			td {
-				padding: 0.2em 1em;
-				border: 1px solid black;
-			}
 			td:nth-child(3), td:nth-child(4) {
-				text-align: center;
-			}
-			.mitte {
 				text-align: center;
 			}
 	body
