--- a/views/system/new-liturgie.jade
+++ b/views/system/new-liturgie.jade
@@ -4,36 +4,9 @@ html
 		title Neue Liturgie
 		meta(charset="utf-8")
 		link(rel="stylesheet", type="text/css", href="/dropout.css")
+		link(rel="stylesheet", type="text/css", href="/system-new.css")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
 		style.
-			body {
-				font-family: Georgia, sans-serif;
-			}
-			fieldset > div {
-				padding: 0.5em;
-			}
-			div > label {
-				float: left;
-				width: 10em;
-			}
-			ul {
-				list-style-type: none;
-			}
-			.spez {
-				list-style-type: none;
-				margin: 0;
-				margin-left: 10em;
-				padding: 0;
-			}
-			fieldset {
-				border-radius: 3em;
-				padding: 2em 4em;
-				width: 30em;
-				margin: 1em;
-			}
-			.mitte {
-				text-align: center;
-			}
 			#submitter button {
 				width: 10em;
 				height: 2.5em;
@@ -78,7 +51,7 @@ html
 					- var __count = 0
 					each __name, __typ in $Liste
 						- __count += 1
-						ul.spez
+						ul.indent
 							li
 								button(type="button")=__typ
 							each __gott, __idx in __name
@@ -93,7 +66,7 @@ html
 			$('#uni').on("click", function() {
 				$('#gott input').prop('checked', true);
 			});
-			$('#gott').on("click", ".spez button", function() {
+			$('#gott').on("click", ".indent button", function() {
 				var $boxes = $(this).closest('ul').find('input');
 				$boxes.prop('checked', !$boxes.prop('checked'));
 			});
