--- a/views/system/edit-zauber.jade
+++ b/views/system/edit-zauber.jade
@@ -7,44 +7,21 @@ mixin Probe3()
 !!! 5
 html(lang="de")
 	head
+		meta(charset="utf-8")
 		title Zauberspruch bearbeiten
+		link(rel="stylesheet", type="text/css", href="/system-new.css")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
-		style.
-			body {
-				font-family: sans-serif;
-			}
-			form {
-				padding-left: 5em;
-			}
-			fieldset > div {
-				padding: 0.5em 0;
-			}
-			div > label {
-				float: left;
-				width: 10em;
-			}
-			.spez {
-				list-style-type: none;
-				margin: 0;
-				margin-left: 10em;
-				padding: 0;
-			}
-			fieldset {
-				display: inline-block;
-				padding: 2em 4em;
-				border-radius: 3em;
-			}
-			#z_name {
-				width: 30em;
-			}
 	body
-		h1 Zauber [#{_Zauber.Name}] bearbeiten
+		nav
+			a(href="/zauber/liste") Zauberliste
 		form#nesp(action="/zauber/"+_Zauber._id, method="post", accept-charset="utf-8")
 			input(type="hidden", name="_method", value="put")
 			fieldset
+				h1.mitte [#{_Zauber.Name}] bearbeiten:
+			fieldset
 				div
 					label(for="z_name") Name
-					input#z_name(type="text", name="Name", value=_Zauber.Name, required)
+					input#z_name.primary-field(type="text", name="Name", value=_Zauber.Name, required)
 				div
 					label Probe
 					+Probe3()
@@ -76,7 +53,7 @@ html(lang="de")
 				div
 					label Typ
 					input#typ(type="hidden", name="modifikation[typ]", value="")
-					ul.spez
+					ul.indent
 						li
 							input(type="checkbox", value="A", id="typ_a", checked=_Zauber.modifikation.typ.indexOf('A') > -1)
 							label(for="typ_a") Aufrechterhaltender Zauber
@@ -91,7 +68,7 @@ html(lang="de")
 							label(for="typ_x") situationsabhängige Erschwernis
 				div
 					label Repräsentationen
-					ul.spez
+					ul.indent
 						each __rep, __idx in Repräsentation
 							- var __active = _Zauber.Repräsentationen.indexOf(__rep.short) > -1
 							li
@@ -99,7 +76,7 @@ html(lang="de")
 								label(for="rep"+__idx, title=__rep.short)= __rep.long
 				div
 					label Ziel
-					ul.spez
+					ul.indent
 						each __ziel, __idx in ziel
 							- var __active = _Zauber.Ziel.indexOf(__ziel.short) > -1
 							li
@@ -107,7 +84,7 @@ html(lang="de")
 								label(for="zl"+__idx, title=__ziel.short)= __ziel.long
 				div
 					label erlaubte spontane Modifikationen
-					ul.spez
+					ul.indent
 						each __spm, __idx in spomo
 							- var __active = _Zauber.SpoMod.indexOf(__spm.short) > -1
 							li
@@ -115,12 +92,13 @@ html(lang="de")
 								label(for="spm"+__idx, title=__spm.short)= __spm.long
 				div
 					label Merkmale
-					ul.spez
+					ul.indent
 						each __mmk, __idx in Merkmal
 							- var __active = _Zauber.Merkmale.indexOf(__mmk) > -1
 							li
 								input(type="checkbox", name="Merkmale[]", value=__mmk, id="mmk"+__idx, checked=__active)
 								label(for="mmk"+__idx)= __mmk
+			fieldset.submitter.mitte
 				button(type="submit") speichern
 		script.
 			$('#stufe').val('#{_Zauber.Komplexität}');
@@ -134,5 +112,5 @@ html(lang="de")
 			});
 		form(action="/zauber/"+_Zauber._id, method="post", accept-charset="utf-8")
 			input(type="hidden", name="_method", value="delete")
-			fieldset
+			fieldset.submitter.mitte
 				button(type="submit") löschen
