--- a/views/system/edit-talent.jade
+++ b/views/system/edit-talent.jade
@@ -8,34 +8,17 @@ mixin Probe3()
 doctype 5
 html
 	head
+		meta(charset="utf-8")
 		title Talent bearbeiten
+		link(rel="stylesheet", type="text/css", href="/system-new.css")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
-		style.
-			body {
-				font-family: sans-serif;
-			}
-			label {
-				float: left;
-				width: 10em;
-			}
-			form {
-				padding-left: 5em;
-			}
-			.spez {
-				list-style-type: none;
-				margin: 0;
-				margin-left: 10em;
-				padding: 0;
-			}
-			fieldset {
-				display: inline-block;
-				padding: 2em 4em;
-				border-radius: 3em;
-			}
 	body
-		h1 Talent [#{name}] bearbeiten:
+		nav
+			a(href="/talent/liste") Talentliste
 		form(action="/talent/"+_id, method="post", accept-charset="utf-8")
 			input(type="hidden", name="_method", value="put")
+			fieldset
+				h1.mitte [#{name}] bearbeiten:
 			fieldset
 				div
 					label(for="t_name") Name
@@ -67,13 +50,14 @@ html
 					input(type="checkbox", name="standard", checked=standard)
 				div
 					label Spezialisierungen
-					ul.spez
+					ul.indent
 						each val in spezialisierungen
 							li
 								input(type="text", name="spezialisierungen", value=val)
 								button.del(type="button")= "\u2717"
 						li
 							button#add(type="button") +
+			fieldset.submitter.mitte
 				button(type="submit") speichern
 		script.
 			$('#add').on("click", function() {
@@ -84,5 +68,8 @@ html
 			$('.del').on('click', function() {
 				$(this).closest('li').remove();
 			});
-		h1
-			a(href="/talente") Talentliste
+		
+		form(action="/talent/"+_id, method="post", accept-charset="utf-8")
+			input(type="hidden", name="_method", value="delete")
+			fieldset.mitte.submitter
+				button(type="submit") löschen
