--- a/views/system/table-of-miracles.jade
+++ b/views/system/table-of-miracles.jade
@@ -1,6 +1,7 @@
 !!! 5
 html
 	head
+		meta(charset="utf-8")
 		title Liturgie-Übersicht
 		link(rel="stylesheet", type="text/css", href="/system-list.css")
 	body
