--- a/views/system/table-of-talents.jade
+++ b/views/system/table-of-talents.jade
@@ -1,6 +1,7 @@
 doctype 5
 html
 	head
+		meta(charset="utf-8")
 		title Talent-Übersicht
 		link(rel="stylesheet", type="text/css", href="/system-list.css")
 		style.
@@ -42,3 +43,5 @@ html
 								td= val.spezialisierungen.join(', ')
 							else
 								td= val.spezialisierungen
+		footer
+			a(href="/talent/neu") neues Talent
